fix: align styles with semantic html

--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -1,4 +1,5 @@
 .navigation-container>div:first-child img {
+    height: auto;
     max-width: 128px;
     margin-top: 7px;
     margin-bottom: 7px;
@@ -31,7 +32,14 @@
     text-decoration: none;
 }
 
+.navigation-container.header p {
+    margin: 0;
+    line-height: 1em;
+}
+
 .navigation.header nav a:hover,
 .navigation.header nav a:focus {
     background-color: var(--brand-primary);
 }
+
+
